--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "machinepack-fs": "^3.0.0",
     "machinepack-http": "^2.1.2",
     "mocha": "^2.2.4",
-    "sails": "0.11.0",
+    "sails": "Karnith/sails",
     "sails.io.js": "^0.11.5",
     "socket.io-redis": "^0.1.4"
   },
